# launchpad

./: .env.example  .gitignore  eslint.config.mjs  netlify.toml  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
anchor/: .gitignore  Anchor.toml  README.md
anchor/programs/launch-controller/: Cargo.toml
anchor/programs/launch-controller/src/: lib.rs  monetization.rs
anchor/scripts/: deploy-devnet.sh
docs/: ARCHITECTURE_ENFORCEMENT.md  ONCHAIN_FEES_AND_REWARDS.md  ONCHAIN_MONETIZATION_AND_REWARDS.md  PRODUCT_ARCHITECTURE.md  UI_CREATOR_MARKET.md  creator-reward-config-architecture.md  privy-integration.md
scripts/: demo-trait-config.json  generate-genesis-collection.ts  inject-api-route-layers.mjs
src/: proxy.ts
src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
src/app/account/: page.tsx
src/components/: Providers.tsx
src/data/: collections.ts
src/lib/: app-chain.ts  contracts.ts  format.ts
src/styles/: design-system.css
src/types/: collection.ts  genesis-pass-nft.ts  platform.ts
supabase/: collections-alpha-vault.sql  collections-token-metadata-profile.sql  creator-profiles.sql  ecosystem-signals-and-indexer.sql  fee-distributions.sql  launches-deploy.sql  launches-discovery.sql  launches-extend.sql  launches-holder-reward.sql  launches-metadata-extras.sql  launches-mint-tiers.sql  launches-project-page.sql  launches-vesting.sql  referrals.sql  reputation-v1.sql  storage-collection-assets.sql  store.sql  users.sql
supabase/migrations/: 20260210120000_drop_collections_dbc_and_curve_columns.sql  (+11 more)
(+257 files in other folders)
